--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,47 @@
+:root {
+  /* COLORS */
+  --primary: #00b8ee;
+  --secondary: #0b254d;
+  --white: #fff;
+  --lightGrey: #f0f0f0;
+  --grey: #eff1f3;
+  --success: #52c41a;
+
+  /* TYPOGRAPHY */
+  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  --fs-base: 1rem;
+  --fs-l: 1.25rem;
+  --fs-xl: 1.75rem;
+  --fs-xxl: 2rem;
+  --fw-bold: 700;
+  --fw-medium: 500;
+  --fw-regular: 300;
+  --lineHeight: 1.2;
+
+  /* other */
+  --borderRadius: 4px;
+  --animDuration: 0.3s;
+  --animEase: ease-out;
+}
+
+* {
+  box-sizing: border-box;
+  line-height: var(--lineHeight);
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 16px;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font-family);
+  font-size: var(--fs-base);
+  min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +49,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 40px;
+  padding-left: 40px;
+}
+
+input[type=text] {
+  width: 100%;
+  border: 1px solid var(--secondary);
+  border-radius: 3px;
+  outline: none;
+  padding: 5px;
+  margin-bottom: 15px;
 }
