--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,9 @@ code {
   margin-left: auto;
   padding-right: 40px;
   padding-left: 40px;
+
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 input[type=text] {
