--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -27,7 +27,9 @@
   &.disabled {
     background-color: var(--grey);
     border-color: var(--grey);
+    color: var(--secondary);
     cursor: not-allowed;
+    opacity: 0.6;
   }
 
   &.active {
